<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/title"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/subtotalInputLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/splitInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtotal"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/splitInputLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="512dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalInputLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/splitHint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <RadioButton
        android:id="@+id/radioTwenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioTwenty"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="227dp" />

    <RadioButton
        android:id="@+id/radioFifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioFifteen"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="269dp" />

    <RadioButton
        android:id="@+id/radioTen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioTen"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="312dp" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioCustom"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="359dp" />

</android.support.constraint.ConstraintLayout>